[gd_scene load_steps=3 format=3 uid="uid://bvn8k3nan5p2qrs"]

[ext_resource type="Script" path="res://scripts/universal_inventory_ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)

[node name="UniversalInventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 80.0
offset_right = -100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
text = "关闭 (ESC)"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PlayerPanel" type="PanelContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2

[node name="VBox" type="VBoxContainer" parent="Panel/HBoxContainer/PlayerPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/HBoxContainer/PlayerPanel/VBox"]
layout_mode = 2
text = "背包"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponContainer" type="VBoxContainer" parent="Panel/HBoxContainer/PlayerPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="InventoryContainer" type="VBoxContainer" parent="Panel/HBoxContainer/PlayerPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/PlayerPanel/VBox/InventoryContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="Panel/HBoxContainer/PlayerPanel/VBox/InventoryContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="ContainerPanel" type="PanelContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2

[node name="VBox" type="VBoxContainer" parent="Panel/HBoxContainer/ContainerPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/HBoxContainer/ContainerPanel/VBox"]
layout_mode = 2
text = "容器"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponContainer" type="VBoxContainer" parent="Panel/HBoxContainer/ContainerPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="InventoryContainer" type="VBoxContainer" parent="Panel/HBoxContainer/ContainerPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/ContainerPanel/VBox/InventoryContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="Panel/HBoxContainer/ContainerPanel/VBox/InventoryContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="InfoPanel" type="PanelContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/HBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemName" type="Label" parent="Panel/HBoxContainer/InfoPanel/VBox"]
layout_mode = 2
text = "选择物品查看详情"
horizontal_alignment = 1

[node name="ItemIcon" type="TextureRect" parent="Panel/HBoxContainer/InfoPanel/VBox"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/InfoPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemDescription" type="Label" parent="Panel/HBoxContainer/InfoPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap_mode = 3
